--- a/_layout_foot.html.slim
+++ b/_layout_foot.html.slim
@@ -1,5 +1,5 @@
-= javascript_include_tag \
-  "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js", \
-  "/vendor/jquery.waypoints.min.js", \
-  "/vendor/jquery.waypoints.sticky.min.js", \
-  "all"
+/ = javascript_include_tag \
+/   "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js", \
+/   "/vendor/jquery.waypoints.min.js", \
+/   "/vendor/jquery.waypoints.sticky.min.js", \
+/   "all"
