--- a/_layout_head.html.slim
+++ b/_layout_head.html.slim
@@ -4,6 +4,12 @@ meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale
 
 = stylesheet_link_tag "all", "/vendor/icomoon/style.css"
 = javascript_include_tag "/vendor/modernizr.custom.76886.js"
+= javascript_include_tag \
+  "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js", \
+  "/vendor/jquery.waypoints.min.js", \
+  "/vendor/jquery.waypoints.sticky.min.js", \
+  "all"
+
 /[if IE]
   = stylesheet_link_tag "ie"
 
