--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -737,12 +737,11 @@ body { background-color: #183840; position: relative; }
   .related-posts .related-post-category { font-size: 16px; line-height: 24px; } }
 
 .homepage .header-sticky-wrapper { position: absolute; top: 0; left: 0; right: 0; }
-.homepage .header, .homepage .sub-menu { width: 100%; }
 .homepage .header-inner, .homepage .sub-menu-inner { width: 100%; }
 @media (min-width: 1025px) { .homepage .header-sticky-wrapper { position: static; }
   .homepage .header { position: static; }
   .homepage .sub-menu { position: static; }
-  .homepage .sticky { position: fixed; top: 0; left: 0; right: 0; z-index: 1000; max-width: 1512px; width: 100%; margin: 0 auto; -webkit-transition: width 0.5s; -moz-transition: width 0.5s; -o-transition: width 0.5s; transition: width 0.5s; }
+  .homepage .sticky { position: fixed; top: 0; left: 0; right: 0; z-index: 1000; max-width: 1512px; width: 100%; margin: 0 auto; }
   .homepage .sub-menu.sticky { margin-top: 61px; background-color: rgba(255, 255, 255, 0.9); } }
 @media (min-width: 1512px) { .homepage .header-inner, .homepage .sub-menu-inner { width: 100%; }
   .homepage .sticky { width: 90%; } }
